# statick-tex

./: .buildinfo  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  README.md  clean.sh  genindex.html  index.html  install.txt  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  statick_tool.html  statick_tool.plugins.discovery.html  statick_tool.plugins.html  statick_tool.plugins.tool.html  tox.ini
.github/workflows/: black.yaml  deploy.yaml  publish-pypi.yaml  test.yml  tests.yaml
docs/source/: index.rst
plugins/: __init__.py
plugins/discovery/: __init__.py
plugins/lacheck_tool_plugin/: __init__.py
plugins/tex_tool_plugins/: chktex_tool_plugin.py
rsc/: config.yaml  tex-config.yaml
src/statick_tex/plugins/discovery/: tex_discovery_plugin.py
src/statick_tex/plugins/tool/: lacheck_tool_plugin.py
statick_tool/: __init__.py
statick_tool/plugins/discovery/: __init__.py  tex_discovery_plugin.py
statick_tool/plugins/tool/: __init__.py  chktex_tool_plugin.py  chktex_tool_plugin.yapsy-plugin
statick_tool/plugins/tool/chktex_tool_plugin/: __init__.py
statick_tool/rsc/: config.yaml  tex.yaml
tests/chktex_tool_plugin/: test_chktex_tool_plugin.py
tests/lacheck_tool_plugin/: test_lacheck_tool_plugin.py
tests/plugins/discovery/tex_discovery_plugin/: test_tex_discovery_plugin.py
tests/plugins/tool/chktex_tool_plugin/: test_chktex_tool_plugin.py
tests/plugins/tool/lacheck_tool_plugin/: test_lacheck_tool_plugin.py
tests/tex_discovery_plugin/: test_tex_discovery_plugin.py
