[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statick-tex"
authors = [{name = "NIWC Pacific"}]
description="Statick analysis plugins for TeX/LaTeX files and projects."
version = "0.4.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC0-1.0"}
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Typing :: Typed",
]
dependencies = [
    "importlib_metadata",
    "statick",
    "types-docutils",
]

[tool.setuptools.package-data]
statick_tool = [
    "rsc/*",
    "rsc/.*",
]

[project.entry-points."statick_tool.plugins.discovery"]
tex = "statick_tool.plugins.discovery.tex:TexDiscoveryPlugin"

[project.entry-points."statick_tool.plugins.tool"]
chktex = "statick_tool.plugins.tool.chktex:ChktexToolPlugin"
lacheck = "statick_tool.plugins.tool.lacheck:LacheckToolPlugin"

[project.urls]
"Homepage" = "https://github.com/tdenewiler/statick-tex"
"Bug Tracker" = "https://github.com/tdenewiler/statick-tex/issues"

[project.optional-dependencies]
test = [
    "coverage",
    "lark",
    "mock",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-gh-actions",
]
docs = [
    "sphinx==1.7.9",
    "yaml-1.3",
]

[tool.isort]
profile = "black"
